Use Qt to save and restore the window geometry and window size

BUG:329280